<resources>
    <string name="app_name">QR Caching</string>
    <string name="app_signup">Sign Up</string>
    <string name="app_login">Login</string>
    <string name="app_IDtext">Student ID</string>
    <string name="app_passwordtext">Password</string>
    <string name="dev_0550">João Moniz 20220550</string>
    <string name="dev_0589">Tomas Salgueiro 20220589</string>
    <string name="app_qrtext">QR CODE</string>
    <string name="app_signguest">Guest Login</string>
    <string name="app_rm">Remember Me</string>
    <string name="app_confirm">Confirm</string>
    <string name="app_usernametext">Username</string>
    <string name="app_emailtext">Email</string>
    <string name="app_maptext">Map</string>
    <string name="app_eventtext">Events</string>
    <string name="app_profilelevel">100</string>
    <string name="app_camera_button">Camera</string>
    <string name="app_profilepic_button">Profilepic</string>
    <string name="app_level">Level</string>
    <string name="app_backtext">Back</string>
    <string name="title_activity_maps">Maps</string>
    <string name="app_locationtext">Location</string>
    <string name="app_takephototext">Take a picture</string>
    <string name="app_writesomethingtext">Write something</string>
</resources>