<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimg1"
    tools:context=".models.signin">

    <TextView
        android:id="@+id/logo_text2"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:fontFamily="serif"
        android:text="@string/app_signup"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_image2" />

    <ImageView
        android:id="@+id/logo_image2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/app_qrtext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/screenshot_1" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="75dp"
        android:scaleX="1.6"
        android:scaleY="1.7"
        android:text="@string/app_confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/login_button2" />

    <Button
        android:id="@+id/login_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="75dp"
        android:scaleX="1.6"
        android:scaleY="1.7"
        android:text="@string/app_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/confirm_button"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/register"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/header"
        android:orientation="vertical"
        android:paddingHorizontal="50dp"
        android:paddingVertical="50dp"
        android:scaleX="1.1"
        android:scaleY="1.3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="400dp">


        <EditText
            android:id="@+id/register_username_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="username"
            android:ems="10"
            android:hint="@string/app_usernametext"
            android:inputType="textPassword"
            android:textColorHint="@color/white" />


        <EditText
            android:id="@+id/register_id_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="ID"
            android:ems="10"
            android:hint="@string/app_IDtext"
            android:inputType="number"
            android:textColorHint="@color/white" />


        <EditText
            android:id="@+id/register_email_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="password"
            android:ems="10"
            android:hint="@string/app_emailtext"
            android:inputType="textPassword"
            android:textColorHint="@color/white" />


        <EditText
            android:id="@+id/register_pw_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="email"
            android:ems="10"
            android:hint="@string/app_passwordtext"
            android:inputType="textPassword"
            android:textColorHint="@color/white" />


    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>